fractional Q wiener process in H2

--- a/examples/Shape stochastics - Functional shapes.ipynb
+++ b/examples/Shape stochastics - Functional shapes.ipynb
@@ -10,22 +10,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "12785c82",
    "metadata": {},
    "outputs": [
     {
-     "ename": "ImportError",
-     "evalue": "dlopen(/Users/libbybaker/Documents/Code/Python/bm-shapes-project/env/lib/python3.9/site-packages/open3d/cpu/pybind.cpython-39-darwin.so, 0x0002): Library not loaded: /opt/homebrew/opt/libomp/lib/libomp.dylib\n  Referenced from: <0718BFA0-280F-3029-A780-D45CF6BB9F0D> /Users/libbybaker/Documents/Code/Python/bm-shapes-project/env/lib/python3.9/site-packages/open3d/cpu/pybind.cpython-39-darwin.so\n  Reason: tried: '/opt/homebrew/opt/libomp/lib/libomp.dylib' (no such file), '/System/Volumes/Preboot/Cryptexes/OS/opt/homebrew/opt/libomp/lib/libomp.dylib' (no such file), '/opt/homebrew/opt/libomp/lib/libomp.dylib' (no such file), '/usr/lib/libomp.dylib' (no such file, not in dyld cache)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mImportError\u001b[0m                               Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn [2], line 5\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[39mimport\u001b[39;00m \u001b[39mnumpy\u001b[39;00m \u001b[39mas\u001b[39;00m \u001b[39mnp\u001b[39;00m\n\u001b[1;32m      4\u001b[0m sys\u001b[39m.\u001b[39mpath\u001b[39m.\u001b[39minsert(\u001b[39m0\u001b[39m,\u001b[39m\"\u001b[39m\u001b[39m../\u001b[39m\u001b[39m\"\u001b[39m)\n\u001b[0;32m----> 5\u001b[0m \u001b[39mfrom\u001b[39;00m \u001b[39mutils\u001b[39;00m \u001b[39mimport\u001b[39;00m shape_stochastics\n",
-      "File \u001b[0;32m~/Documents/Code/Python/bm-shapes-project/bm-shapes/examples/../utils/shape_stochastics.py:8\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[39mimport\u001b[39;00m \u001b[39msys\u001b[39;00m\n\u001b[1;32m      7\u001b[0m sys\u001b[39m.\u001b[39mpath\u001b[39m.\u001b[39minsert(\u001b[39m0\u001b[39m,\u001b[39m\"\u001b[39m\u001b[39m../\u001b[39m\u001b[39m\"\u001b[39m)\n\u001b[0;32m----> 8\u001b[0m \u001b[39mfrom\u001b[39;00m \u001b[39mutils\u001b[39;00m \u001b[39mimport\u001b[39;00m sph_utils, mesh_processing\n\u001b[1;32m     10\u001b[0m \u001b[39mimport\u001b[39;00m \u001b[39mpyssht\u001b[39;00m\n\u001b[1;32m     13\u001b[0m \u001b[39mdef\u001b[39;00m \u001b[39mmake_grid\u001b[39m(N):\n",
-      "File \u001b[0;32m~/Documents/Code/Python/bm-shapes-project/bm-shapes/examples/../utils/mesh_processing.py:5\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[39mfrom\u001b[39;00m \u001b[39mscipy\u001b[39;00m\u001b[39m.\u001b[39;00m\u001b[39mio\u001b[39;00m \u001b[39mimport\u001b[39;00m savemat\n\u001b[1;32m      4\u001b[0m \u001b[39mimport\u001b[39;00m \u001b[39mos\u001b[39;00m\n\u001b[0;32m----> 5\u001b[0m \u001b[39mimport\u001b[39;00m \u001b[39mopen3d\u001b[39;00m \u001b[39mas\u001b[39;00m \u001b[39mo3d\u001b[39;00m\n\u001b[1;32m      6\u001b[0m \u001b[39mimport\u001b[39;00m \u001b[39mcopy\u001b[39;00m\n\u001b[1;32m      7\u001b[0m \u001b[39mimport\u001b[39;00m \u001b[39mtrimesh\u001b[39;00m \u001b[39mas\u001b[39;00m \u001b[39mtri\u001b[39;00m\n",
-      "File \u001b[0;32m~/Documents/Code/Python/bm-shapes-project/env/lib/python3.9/site-packages/open3d/__init__.py:97\u001b[0m\n\u001b[1;32m     91\u001b[0m         warnings\u001b[39m.\u001b[39mwarn(\n\u001b[1;32m     92\u001b[0m             \u001b[39m\"\u001b[39m\u001b[39mOpen3D was built with CUDA support, but Open3D CUDA Python \u001b[39m\u001b[39m\"\u001b[39m\n\u001b[1;32m     93\u001b[0m             \u001b[39m\"\u001b[39m\u001b[39mbinding library not found! Falling back to the CPU Python \u001b[39m\u001b[39m\"\u001b[39m\n\u001b[1;32m     94\u001b[0m             \u001b[39m\"\u001b[39m\u001b[39mbinding library.\u001b[39m\u001b[39m\"\u001b[39m, \u001b[39mImportWarning\u001b[39;00m)\n\u001b[1;32m     96\u001b[0m \u001b[39mif\u001b[39;00m __DEVICE_API__ \u001b[39m==\u001b[39m \u001b[39m'\u001b[39m\u001b[39mcpu\u001b[39m\u001b[39m'\u001b[39m:\n\u001b[0;32m---> 97\u001b[0m     \u001b[39mfrom\u001b[39;00m \u001b[39mopen3d\u001b[39;00m\u001b[39m.\u001b[39;00m\u001b[39mcpu\u001b[39;00m\u001b[39m.\u001b[39;00m\u001b[39mpybind\u001b[39;00m \u001b[39mimport\u001b[39;00m (camera, data, geometry, io, pipelines,\n\u001b[1;32m     98\u001b[0m                                    utility, t)\n\u001b[1;32m     99\u001b[0m     \u001b[39mfrom\u001b[39;00m \u001b[39mopen3d\u001b[39;00m\u001b[39m.\u001b[39;00m\u001b[39mcpu\u001b[39;00m \u001b[39mimport\u001b[39;00m pybind\n\u001b[1;32m    101\u001b[0m \u001b[39mimport\u001b[39;00m \u001b[39mopen3d\u001b[39;00m\u001b[39m.\u001b[39;00m\u001b[39mcore\u001b[39;00m\n",
-      "\u001b[0;31mImportError\u001b[0m: dlopen(/Users/libbybaker/Documents/Code/Python/bm-shapes-project/env/lib/python3.9/site-packages/open3d/cpu/pybind.cpython-39-darwin.so, 0x0002): Library not loaded: /opt/homebrew/opt/libomp/lib/libomp.dylib\n  Referenced from: <0718BFA0-280F-3029-A780-D45CF6BB9F0D> /Users/libbybaker/Documents/Code/Python/bm-shapes-project/env/lib/python3.9/site-packages/open3d/cpu/pybind.cpython-39-darwin.so\n  Reason: tried: '/opt/homebrew/opt/libomp/lib/libomp.dylib' (no such file), '/System/Volumes/Preboot/Cryptexes/OS/opt/homebrew/opt/libomp/lib/libomp.dylib' (no such file), '/opt/homebrew/opt/libomp/lib/libomp.dylib' (no such file), '/usr/lib/libomp.dylib' (no such file, not in dyld cache)"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Jupyter environment detected. Enabling Open3D WebVisualizer.\n",
+      "[Open3D INFO] WebRTC GUI backend enabled.\n",
+      "[Open3D INFO] WebRTCWindowSystem: HTTP handshake server disabled.\n"
      ]
     }
    ],
@@ -47,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "099b5a2b",
    "metadata": {},
    "outputs": [],
@@ -64,7 +59,7 @@
     "def sphere_function_z(theta, phi):\n",
     "    return np.cos(theta)\n",
     "\n",
-    "n = 225 #choose a resolution for the sph decomposition (HAS TO BE A SQUARED NUMBER FOR ISOTROPIC NOISE !!!)\n",
+    "n = 25 #choose a resolution for the sph decomposition (HAS TO BE A SQUARED NUMBER FOR ISOTROPIC NOISE !!!)\n",
     "Q = np.eye(n)\n",
     "lambdas = np.array([1/((k+2)*(k+1)) for k in range (0,n)])\n",
     "Q = np.diag(lambdas)"
@@ -133,7 +128,7 @@
     "### Compute the Q-Wiener process and output the list of meshes during the process and a .gif file \n",
     "shape_stochastics.compute_wiener_process(sphere_function_x, sphere_function_y, sphere_function_z,\n",
     "                                         theta = theta, phi = phi, Q = Q, n = n, t=120, n_step=50, make_gif = True,\n",
-    "                                         file_dir = \"tests/wiener_process\", file_name = \"Q_squared_225coeffs.gif\")"
+    "                                         file_dir = \"tests/wiener_process_fshape\", file_name = \"Q_squared_225coeffs.gif\")"
    ]
   },
   {
@@ -146,7 +141,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "8d53e011",
    "metadata": {},
    "outputs": [],
@@ -178,54 +173,54 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "0102cc9e",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([[[-1.04258768e-17,  1.01168327e-01,  2.01298529e-01, ...,\n",
-       "          2.00298232e-01,  1.00665598e-01, -3.65372979e-19],\n",
-       "        [ 9.21128938e-18,  5.96551583e-18,  3.18731194e-18, ...,\n",
-       "         -2.00428611e-02, -1.00731124e-02,  2.57079030e-18],\n",
+       "array([[[ 1.07570722e-17,  1.01168327e-01,  2.01298529e-01, ...,\n",
+       "          2.00298232e-01,  1.00665598e-01, -1.42261643e-17],\n",
+       "        [ 3.62425013e-18, -5.14751437e-19, -4.07711949e-18, ...,\n",
+       "         -2.00428611e-02, -1.00731124e-02,  4.19052129e-18],\n",
        "        [ 1.00000005e+00,  9.94869369e-01,  9.79529986e-01, ...,\n",
        "         -9.79529986e-01, -9.94869369e-01, -1.00000005e+00]],\n",
        "\n",
-       "       [[ 1.30165384e-01,  2.24969144e-01,  3.03566884e-01, ...,\n",
-       "          4.28767192e-01,  2.94516090e-01,  1.30268073e-01],\n",
-       "        [ 4.21473406e-01,  4.04426592e-01,  3.55426832e-01, ...,\n",
-       "         -1.11159234e-01, -3.51198874e-02,  2.11053656e-02],\n",
-       "        [ 8.80872517e-01,  8.20756605e-01,  7.46941719e-01, ...,\n",
-       "         -1.03992208e+00, -1.10930307e+00, -1.16566718e+00]],\n",
+       "       [[-4.68399524e-02,  9.01370115e-02,  2.41077250e-01, ...,\n",
+       "          5.98031473e-01,  4.63007573e-01,  3.19157564e-01],\n",
+       "        [-7.64469559e-02, -7.07861187e-02, -6.07100393e-02, ...,\n",
+       "          2.30048047e-01,  2.23521854e-01,  1.89961490e-01],\n",
+       "        [ 1.03799973e+00,  9.87900622e-01,  9.22392571e-01, ...,\n",
+       "         -1.05049300e+00, -1.12929182e+00, -1.20104774e+00]],\n",
        "\n",
-       "       [[-6.84797353e-02,  8.94959893e-03,  8.74835792e-02, ...,\n",
-       "          5.52517773e-01,  3.82962304e-01,  1.69025910e-01],\n",
-       "        [ 3.84754852e-01,  3.95460766e-01,  3.82155714e-01, ...,\n",
-       "         -4.17023235e-01, -3.80753044e-01, -3.28994495e-01],\n",
-       "        [ 1.17611344e+00,  1.11204675e+00,  1.01389376e+00, ...,\n",
-       "         -9.50237319e-01, -1.04046294e+00, -1.11569167e+00]],\n",
+       "       [[-1.16173436e-01,  9.38086280e-02,  3.01803771e-01, ...,\n",
+       "          7.20130685e-01,  6.54336287e-01,  5.71531436e-01],\n",
+       "        [-2.09698286e-01, -1.67227374e-01, -1.29197955e-01, ...,\n",
+       "          4.95913319e-03,  8.50934569e-02,  1.35058701e-01],\n",
+       "        [ 1.21309096e+00,  1.11339732e+00,  9.86439881e-01, ...,\n",
+       "         -1.04420891e+00, -1.06373484e+00, -1.09932410e+00]],\n",
        "\n",
        "       ...,\n",
        "\n",
-       "       [[ 4.79844855e-01,  7.03135224e-01,  9.11473210e-01, ...,\n",
-       "          2.95056724e-02, -2.63037786e-01, -5.36239247e-01],\n",
-       "        [ 3.54731297e-01,  3.74350005e-01,  3.91571086e-01, ...,\n",
-       "         -4.87218570e-01, -5.67575785e-01, -5.84257469e-01],\n",
-       "        [ 1.89840610e+00,  1.76963301e+00,  1.64897243e+00, ...,\n",
-       "         -1.83514851e+00, -1.91115641e+00, -1.98738485e+00]],\n",
+       "       [[-2.34675378e-01, -4.73412829e-02,  1.48918444e-01, ...,\n",
+       "          6.72904604e-01,  4.07203284e-01,  1.18388495e-01],\n",
+       "        [ 1.21505346e-01,  2.57236191e-01,  3.79311451e-01, ...,\n",
+       "         -7.36326683e-01, -6.75238543e-01, -5.70699245e-01],\n",
+       "        [ 2.04650092e+00,  2.05728271e+00,  2.06015740e+00, ...,\n",
+       "         -2.28398086e+00, -2.28623059e+00, -2.23588720e+00]],\n",
        "\n",
-       "       [[-1.03816096e-01,  1.68306886e-01,  4.54671931e-01, ...,\n",
-       "          3.64579811e-01,  2.07182496e-01,  5.53367432e-02],\n",
-       "        [ 1.78539127e-01,  2.19809656e-01,  2.23743987e-01, ...,\n",
-       "          5.78114294e-02,  1.21907744e-01,  1.94665323e-01],\n",
-       "        [ 1.92912632e+00,  1.86482401e+00,  1.77645607e+00, ...,\n",
-       "         -1.92947075e+00, -1.95143819e+00, -1.97304260e+00]],\n",
+       "       [[-3.04865428e-01, -1.19949541e-01,  8.07976792e-02, ...,\n",
+       "          4.72737592e-01,  2.36665929e-01, -2.10976719e-02],\n",
+       "        [-3.75805827e-01, -3.02840577e-01, -2.20252382e-01, ...,\n",
+       "         -3.33695817e-01, -2.46476625e-01, -1.47693043e-01],\n",
+       "        [ 2.04283808e+00,  2.05771717e+00,  2.03685372e+00, ...,\n",
+       "         -2.39504521e+00, -2.42281139e+00, -2.40932079e+00]],\n",
        "\n",
-       "       [[-2.08517535e-17,  2.02336653e-01,  4.02597059e-01, ...,\n",
-       "          4.00596463e-01,  2.01331197e-01, -7.30745958e-19],\n",
-       "        [ 1.84225788e-17,  1.19310317e-17,  6.37462389e-18, ...,\n",
-       "         -4.00857222e-02, -2.01462248e-02,  5.14158061e-18],\n",
+       "       [[ 2.15141443e-17,  2.02336653e-01,  4.02597059e-01, ...,\n",
+       "          4.00596463e-01,  2.01331197e-01, -2.84523286e-17],\n",
+       "        [ 7.24850025e-18, -1.02950287e-18, -8.15423899e-18, ...,\n",
+       "         -4.00857222e-02, -2.01462248e-02,  8.38104257e-18],\n",
        "        [ 2.00000009e+00,  1.98973874e+00,  1.95905997e+00, ...,\n",
        "         -1.95905997e+00, -1.98973874e+00, -2.00000009e+00]]])"
       ]
@@ -243,52 +238,105 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "778830a6",
+   "cell_type": "markdown",
+   "id": "71cf9ecd",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "## Fractional spectral Wiener process"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "id": "e58ff834",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "theta, phi = shape_stochastics.make_grid(N=32) #Build a grid on the sphere with a given resolution given by N\n",
+    "\n",
+    "### Shape defined through 3 separated functions giving the xyz coordinates ###\n",
+    "def sphere_function_x(theta, phi):\n",
+    "    return np.sin(theta)*np.cos(phi)\n",
+    "\n",
+    "def sphere_function_y(theta, phi):\n",
+    "    return np.sin(theta)*np.sin(phi)\n",
+    "\n",
+    "def sphere_function_z(theta, phi):\n",
+    "    return np.cos(theta)\n",
+    "\n",
+    "n = 49 #choose a resolution for the sph decomposition (HAS TO BE A SQUARED NUMBER FOR ISOTROPIC NOISE !!!)\n",
+    "#Q = np.eye(n)\n",
+    "lambdas = np.array([1/np.sqrt(1 + (k+2)*(k+1)) for k in range (0,n)])\n",
+    "Q = np.diag(lambdas)\n",
+    "H = 0.8"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
    "id": "c9df67aa",
    "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "e155aac3",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "c43e7db6",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "6442fb0b",
-   "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[[-0.01157019,  0.08891386,  0.18916498, ...,  0.19565624,\n",
+       "          0.09600299, -0.00489842],\n",
+       "        [-0.00194447, -0.00136364, -0.00174598, ..., -0.03076983,\n",
+       "         -0.01945875, -0.00832936],\n",
+       "        [ 1.00551611,  1.00021957,  0.98571386, ..., -0.97274034,\n",
+       "         -0.98982928, -0.99553808]],\n",
+       "\n",
+       "       [[-0.02446628,  0.07681729,  0.17817893, ...,  0.1991581 ,\n",
+       "          0.09817155, -0.00445013],\n",
+       "        [-0.01249118, -0.01285297, -0.01389625, ..., -0.03375577,\n",
+       "         -0.02048036, -0.00745286],\n",
+       "        [ 0.9880634 ,  0.98351583,  0.97052573, ..., -0.96378703,\n",
+       "         -0.98159799, -0.98764752]],\n",
+       "\n",
+       "       [[-0.04376678,  0.05590322,  0.15660548, ...,  0.20551563,\n",
+       "          0.10498139,  0.00121283],\n",
+       "        [-0.01417161, -0.01383798, -0.01474358, ..., -0.03653842,\n",
+       "         -0.02346936, -0.00994363],\n",
+       "        [ 0.97689044,  0.9732451 ,  0.96180918, ..., -0.95550818,\n",
+       "         -0.9754243 , -0.98281392]],\n",
+       "\n",
+       "       ...,\n",
+       "\n",
+       "       [[-0.02487614,  0.02356416,  0.0722855 , ...,  0.49564315,\n",
+       "          0.38433669,  0.2611912 ],\n",
+       "        [ 0.16478301,  0.18556806,  0.18366194, ...,  0.07225697,\n",
+       "          0.10712892,  0.13396795],\n",
+       "        [ 0.82908347,  0.77971422,  0.74670181, ..., -0.89396139,\n",
+       "         -0.958441  , -0.99638529]],\n",
+       "\n",
+       "       [[-0.0213946 ,  0.02752902,  0.07613557, ...,  0.50337653,\n",
+       "          0.3934104 ,  0.27112155],\n",
+       "        [ 0.1602397 ,  0.18307763,  0.1822343 , ...,  0.06270266,\n",
+       "          0.09615329,  0.12188025],\n",
+       "        [ 0.81580347,  0.76540835,  0.73194728, ..., -0.89579303,\n",
+       "         -0.96149196, -1.0005093 ]],\n",
+       "\n",
+       "       [[-0.01787849,  0.03227234,  0.08254752, ...,  0.49537337,\n",
+       "          0.38491008,  0.26314816],\n",
+       "        [ 0.16818156,  0.18998881,  0.18830454, ...,  0.06136484,\n",
+       "          0.09429899,  0.11955112],\n",
+       "        [ 0.78114956,  0.72900916,  0.6942282 , ..., -0.9057075 ,\n",
+       "         -0.97025908, -1.00832941]]])"
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "### Compute the Q-Wiener process and output the list of meshes during the process and a .gif file \n",
+    "### RUN TWICE\n",
+    "shape_stochastics.compute_fractional_process(sphere_function_x, sphere_function_y, sphere_function_z,\n",
+    "                                         theta = theta, phi = phi, Q = Q, H = H, n = n, t=1, n_step=50, make_gif = True,\n",
+    "                                         file_dir = \"tests/fractional_process_fshape\", file_name = \"Q_Bessel_49_H0-8coeffs.gif\")"
+   ]
   },
   {
    "cell_type": "code",
@@ -301,7 +349,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.9.13 ('env': venv)",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -315,7 +363,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.13"
+   "version": "3.8.10"
   },
   "vscode": {
    "interpreter": {
