--- a/examples/Shape stochastics - Functional shapes.ipynb
+++ b/examples/Shape stochastics - Functional shapes.ipynb
@@ -61,8 +61,7 @@
     "\n",
     "n = 25 #choose a resolution for the sph decomposition (HAS TO BE A SQUARED NUMBER FOR ISOTROPIC NOISE !!!)\n",
     "Q = np.eye(n)\n",
-    "lambdas = np.array([1/((k+2)*(k+1)) for k in range (0,n)])\n",
-    "Q = np.diag(lambdas)"
+    "Q = np.diag(np.array([1/((k+2)*(k+1)) for k in range (0,n)]))"
    ]
   },
   {
@@ -242,7 +241,7 @@
    "id": "71cf9ecd",
    "metadata": {},
    "source": [
-    "## Fractional spectral Wiener process"
+    "## Fractional spectral Wiener process in H²"
    ]
   },
   {
@@ -363,7 +362,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.10"
+   "version": "3.9.13"
   },
   "vscode": {
    "interpreter": {
