--- a/examples/Stochastics on general shapes (mesh).ipynb
+++ b/examples/Stochastics on general shapes (mesh).ipynb
@@ -22,7 +22,7 @@
    "id": "9b690abd",
    "metadata": {},
    "source": [
-    "## Application on the Stanford bunny (or any 3D mesh)"
+    "## Q-Wiener process on meshes"
    ]
   },
   {
@@ -167,15 +167,61 @@
     "                                               x_view=-70, y_view=0, z_view=240)\n",
     "         \n",
     "    \n",
-    "    #x_view=0, y_view=0, z_view=0) for face\n",
-    "    #x_view=-70, y_view=0, z_view=120) for horse\n",
-    "    #x_view=-70, y_view=0, z_view=250) for labrador skull"
+    "#(x_view=0, y_view=0, z_view=0) for face\n",
+    "#(x_view=-70, y_view=0, z_view=120) for horse\n",
+    "#(x_view=-70, y_view=0, z_view=250) for labrador skull"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "47d7bd43",
+   "metadata": {},
+   "source": [
+    "## Diffusion process on mesh space"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0e30d07f",
+   "id": "75049fbd",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "n = 25 #choose a resolution for the sph decomposition (HAS TO BE A SQUARED NUMBER)\n",
+    "Q = np.eye(n)\n",
+    "\n",
+    "\n",
+    "### parameters for a Ornstein-Ulhenbeck diffusion process\n",
+    "h, mu, sig = 1, 0, 0.1\n",
+    "b = lambda t, x : - h*(mu - x)\n",
+    "sigma = lambda t, x : sig"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "13dd0f24",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "shape_stochastics.compute_diffusion_process_shape(x_mesh=x_mesh, y_mesh=y_mesh, z_mesh=z_mesh, faces=new_mesh_F, Q=Q, b=b, sigma=sigma,\n",
+    "                                               n = 25, t=1, n_step=20, make_gif=True, \n",
+    "                                               file_dir = \"tests/sde_process_bunny\", file_name = \"test.gif\",\n",
+    "                                               x_view=-70, y_view=0, z_view=250)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "56174fe0",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "960903c7",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -197,7 +243,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.10"
+   "version": "3.9.13"
   }
  },
  "nbformat": 4,
