get data for sph meshes

--- a/examples/Shape stochastics - Functional shapes.ipynb
+++ b/examples/Shape stochastics - Functional shapes.ipynb
@@ -66,6 +66,28 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 15,
+   "id": "8e10876b",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([0.00000000e+00, 1.01168322e-01, 2.01298520e-01, ...,\n",
+       "       2.00298223e-01, 1.00665594e-01, 1.21856125e-16])"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "sphere_function_x(theta,phi)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "id": "9996bfaf",
    "metadata": {},
@@ -362,7 +384,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.13"
+   "version": "3.8.10"
   },
   "vscode": {
    "interpreter": {
