rm unused packages

--- a/examples/Stochastics on general shapes (mesh).ipynb
+++ b/examples/Stochastics on general shapes (mesh).ipynb
@@ -2,10 +2,20 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "id": "98108b10",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Jupyter environment detected. Enabling Open3D WebVisualizer.\n",
+      "[Open3D INFO] WebRTC GUI backend enabled.\n",
+      "[Open3D INFO] WebRTCWindowSystem: HTTP handshake server disabled.\n"
+     ]
+    }
+   ],
    "source": [
     "import sys\n",
     "import numpy as np\n",
@@ -27,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "id": "2cf6c2b8",
    "metadata": {},
    "outputs": [],
@@ -48,7 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "id": "2abe62ea",
    "metadata": {},
    "outputs": [],
@@ -63,7 +73,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 4,
    "id": "b9dd9382",
    "metadata": {},
    "outputs": [
@@ -98,59 +108,88 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 11,
+   "id": "9ec54627",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "M =o3d.geometry.TriangleMesh.create_torus(torus_radius=2.0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "eba82096",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "V,F,Rho = mesh_processing.getDataFromMesh(M)\n",
+    "mesh = tri.Trimesh(V,F)\n",
+    "new_mesh, new_mesh_V, new_mesh_F = mesh, mesh.vertices, mesh.faces\n",
+    "\n",
+    "new_mesh_V[:,0] = (new_mesh_V[:,0] - new_mesh_V[:,0].mean()) / new_mesh_V[:,2].max(axis=0)\n",
+    "new_mesh_V[:,1] = (new_mesh_V[:,1] - new_mesh_V[:,1].mean()) / new_mesh_V[:,2].max(axis=0)\n",
+    "new_mesh_V[:,2] = (new_mesh_V[:,2] - new_mesh_V[:,2].mean()) / new_mesh_V[:,2].max(axis=0)\n",
+    "\n",
+    "new_mesh = tri.Trimesh(vertices = new_mesh_V, faces = new_mesh_F)\n",
+    "(x_mesh, y_mesh, z_mesh) = new_mesh_V[:,0], new_mesh_V[:,1], new_mesh_V[:,2]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
    "id": "50ede4fd",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([[[ 0.24144763,  0.43712488, -0.39611983, ..., -0.02858667,\n",
-       "         -0.14610611, -0.37275212],\n",
-       "        [-0.80751027, -0.50819825, -0.42240266, ..., -1.17938784,\n",
-       "         -1.05537943,  0.63119975],\n",
-       "        [ 0.30181823,  0.00794864, -0.24093472, ...,  0.29072117,\n",
-       "          0.09850361, -0.26247069]],\n",
+       "array([[[ 5.00000000e+00,  4.95105652e+00,  4.80901699e+00, ...,\n",
+       "          4.48753114e+00,  4.70392843e+00,  4.84286405e+00],\n",
+       "        [ 5.12692427e-16,  4.73102769e-16,  3.85709122e-16, ...,\n",
+       "         -9.53854189e-01, -9.99850854e-01, -1.02938253e+00],\n",
+       "        [ 3.06161700e-16,  3.09016994e-01,  5.87785252e-01, ...,\n",
+       "         -8.09016994e-01, -5.87785252e-01, -3.09016994e-01]],\n",
        "\n",
-       "       [[ 0.2577073 ,  0.44609337, -0.37980716, ..., -0.02360957,\n",
-       "         -0.14421561, -0.35796695],\n",
-       "        [-0.80405875, -0.5093539 , -0.42694844, ..., -1.16876545,\n",
-       "         -1.0446358 ,  0.62134552],\n",
-       "        [ 0.30071276,  0.01142314, -0.23529154, ...,  0.30368308,\n",
-       "          0.11489578, -0.27302557]],\n",
+       "       [[ 4.99785479e+00,  4.94396758e+00,  4.79762395e+00, ...,\n",
+       "          4.50868857e+00,  4.72410888e+00,  4.86072811e+00],\n",
+       "        [ 2.47793533e-02,  2.58055772e-02,  2.70191852e-02, ...,\n",
+       "         -8.60022073e-01, -9.09223045e-01, -9.45792184e-01],\n",
+       "        [ 3.15206215e-02,  3.47339628e-01,  6.28749261e-01, ...,\n",
+       "         -8.44375764e-01, -6.16557905e-01, -3.25815165e-01]],\n",
        "\n",
-       "       [[ 0.25639649,  0.44427177, -0.38147003, ..., -0.02433411,\n",
-       "         -0.14557578, -0.34509908],\n",
-       "        [-0.7906254 , -0.51340729, -0.4258872 , ..., -1.1577053 ,\n",
-       "         -1.03938526,  0.62501616],\n",
-       "        [ 0.30720077,  0.01073117, -0.2347767 , ...,  0.30829344,\n",
-       "          0.11606906, -0.26039319]],\n",
+       "       [[ 4.99256168e+00,  4.94042660e+00,  4.79616854e+00, ...,\n",
+       "          4.50167888e+00,  4.71186229e+00,  4.84454425e+00],\n",
+       "        [-9.29010582e-02, -1.01828891e-01, -1.02419113e-01, ...,\n",
+       "         -8.91108125e-01, -9.53172244e-01, -1.00468547e+00],\n",
+       "        [-4.32225466e-02,  2.72370638e-01,  5.57356421e-01, ...,\n",
+       "         -8.99149837e-01, -6.86206158e-01, -4.10581287e-01]],\n",
        "\n",
        "       ...,\n",
        "\n",
-       "       [[ 0.27073814,  0.52480553, -0.34332541, ..., -0.03781187,\n",
-       "         -0.15015533, -0.34544019],\n",
-       "        [-0.76612738, -0.49561278, -0.36856346, ..., -1.13778473,\n",
-       "         -1.0215507 ,  0.6732318 ],\n",
-       "        [ 0.28919659, -0.01432153, -0.19816163, ...,  0.30733255,\n",
-       "          0.15660751, -0.26945165]],\n",
+       "       [[ 4.78865188e+00,  4.78224215e+00,  4.69232126e+00, ...,\n",
+       "          4.42207457e+00,  4.61084568e+00,  4.73965336e+00],\n",
+       "        [-1.08708314e-01, -2.02502680e-02,  3.64633915e-02, ...,\n",
+       "         -1.09915480e+00, -1.07856303e+00, -1.02598374e+00],\n",
+       "        [-1.12018170e+00, -7.60306082e-01, -3.62435367e-01, ...,\n",
+       "         -1.47672204e+00, -1.38716867e+00, -1.21879570e+00]],\n",
        "\n",
-       "       [[ 0.27277678,  0.51824677, -0.34056331, ..., -0.0391536 ,\n",
-       "         -0.15323296, -0.33260767],\n",
-       "        [-0.77179326, -0.48582208, -0.37140389, ..., -1.15223043,\n",
-       "         -1.03825684,  0.67646963],\n",
-       "        [ 0.30876521, -0.00864158, -0.20536885, ...,  0.3156532 ,\n",
-       "          0.16091728, -0.26587781]],\n",
+       "       [[ 4.81325919e+00,  4.79847519e+00,  4.70411540e+00, ...,\n",
+       "          4.45692889e+00,  4.63853483e+00,  4.75781460e+00],\n",
+       "        [-1.08520037e-01, -2.45133013e-02,  3.28100075e-02, ...,\n",
+       "         -1.08882446e+00, -1.07464810e+00, -1.02979683e+00],\n",
+       "        [-1.07128015e+00, -7.33592393e-01, -3.57564607e-01, ...,\n",
+       "         -1.41081803e+00, -1.32519869e+00, -1.16597745e+00]],\n",
        "\n",
-       "       [[ 0.2643594 ,  0.51287961, -0.32704522, ..., -0.04384291,\n",
-       "         -0.15389739, -0.32380219],\n",
-       "        [-0.77002798, -0.48220126, -0.371768  , ..., -1.14574701,\n",
-       "         -1.02940275,  0.69043794],\n",
-       "        [ 0.29393486, -0.01667427, -0.20755685, ...,  0.30379985,\n",
-       "          0.15654609, -0.26809424]]])"
+       "       [[ 4.81159741e+00,  4.79942793e+00,  4.70560968e+00, ...,\n",
+       "          4.44031513e+00,  4.62366986e+00,  4.74540477e+00],\n",
+       "        [-1.91766664e-01, -8.83547118e-02, -1.13615620e-02, ...,\n",
+       "         -1.14957312e+00, -1.12983440e+00, -1.07447527e+00],\n",
+       "        [-1.03898686e+00, -6.96416955e-01, -3.18676281e-01, ...,\n",
+       "         -1.41237700e+00, -1.32250325e+00, -1.15914336e+00]]])"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -158,12 +197,12 @@
    "source": [
     "# Compute Q-Wiener process\n",
     "\n",
-    "n = 25\n",
+    "n = 49\n",
     "Q = np.eye(n)\n",
     "\n",
-    "shape_stochastics.compute_wiener_process_shape(x_mesh=x_mesh, y_mesh=y_mesh, z_mesh=z_mesh, faces=new_mesh_F, Q=Q, n = n, t=1.2, \n",
-    "                                               n_step=30, make_gif=True, \n",
-    "                                               file_dir = \"tests/wiener_process_skull\", file_name = \"test.gif\",\n",
+    "shape_stochastics.compute_wiener_process_shape(x_mesh=x_mesh, y_mesh=y_mesh, z_mesh=z_mesh, faces=new_mesh_F, Q=Q, n = n, t=1.5, \n",
+    "                                               n_step=40, make_gif=True, \n",
+    "                                               file_dir = \"tests/wiener_process_torus\", file_name = \"test.gif\",\n",
     "                                               x_view=-70, y_view=0, z_view=240)\n",
     "         \n",
     "    \n",
